<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Yi3D</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="login">登入</string>
    <string name="forget_password">忘记密码?</string>
    <string name="pass_code">验证码:</string>
    <string name="repeat_password">确认密码:</string>
    <string name="back">返回</string>
    <string name="getValidateCode_failed">获取验证码失败!</string>
    <string name="please_input_hole_datas">请填写完整数据!</string>
    <string name="input_twice_error">两次输入密码不一致!</string>
    <string name="sign_up_error">注册失败!</string>
    <string name="sign_in_error">登入失败!</string>
    <string name="house_overlap">房间重合，操作无效!</string>
    <string-array name="main2d_bottom_titles">
        <item>房间</item>
        <item>门窗</item>
        <item>铺砖</item>
        <item>布置</item>
    </string-array>
    <string-array name="menu_titles">
        <item>新建</item>
        <item>打开</item>
        <item>保存</item>
        <item>另存</item>
        <item>量尺</item>
    </string-array>
    <string name="gaps_size">砖缝宽</string>
    <string name="gaps_color">砖缝色</string>
    <string name="calculate_tiles_count">算砖</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string-array name="furniture_bottom_titles">
        <item>门</item>
        <item>窗</item>
        <item>吊顶</item>
        <item>方案</item>
    </string-array>
    <string name="accurate_input_xlong">长度:</string>
    <string name="accurate_input_width">宽度:</string>
    <string name="accurate_input_height">高度:</string>
    <string name="accurate_input">设置(单位mm)</string>
    <string name="camera_phone_select">本机相册</string>
    <string name="camera_take_phone">拍照</string>
</resources>
