<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEFFFFFF"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/d40dp"
        android:background="@color/mainColor">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:text="@string/accurate_input"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/longLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d45dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/accurate_input_xlong"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/xlong"
            android:layout_width="@dimen/d180dp"
            android:layout_height="@dimen/d35dp"
            android:layout_marginLeft="@dimen/d8dp"
            android:background="@mipmap/bg_edittext"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:lines="1"
            android:maxLength="6"
            android:paddingLeft="3dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/widthLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d45dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/accurate_input_width"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/width"
            android:layout_width="@dimen/d180dp"
            android:layout_height="@dimen/d35dp"
            android:layout_marginLeft="@dimen/d8dp"
            android:background="@mipmap/bg_edittext"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:lines="1"
            android:maxLength="6"
            android:paddingLeft="3dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/heightLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d45dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/accurate_input_height"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/height"
            android:layout_width="@dimen/d180dp"
            android:layout_height="@dimen/d35dp"
            android:layout_marginLeft="@dimen/d8dp"
            android:background="@mipmap/bg_edittext"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:lines="1"
            android:maxLength="6"
            android:paddingLeft="3dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="@dimen/d8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/common_main_btn"
            android:text="@string/cancel"
            android:textSize="16sp" />

        <Button
            android:id="@+id/confirm"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_marginLeft="16dp"
            android:background="@drawable/common_main_btn"
            android:text="@string/confirm"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>